--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ notifications:
     on_success: change
     on_failure: change
 sudo: false
+after_success:
+  - npm install -g codecov
+  - codecov
